fix: updated based on pr request change
