# src/features/questionnaire/questionnaireController.ts
@@ -1,27 +1,31 @@
-import { catchAsyncErrors } from "@/middlewares/catchAsyncErrors";
-import { NextApiRequest, NextApiResponse } from "next";
-import { ApiResponse } from "@/types";
+import { NextApiResponse } from "next";
 import { NextHandler } from "next-connect";
+
+import { StatusCodes } from "@/constants/statusCode";
+
+import type { ApiResponse } from "@/types";
+
+import { QUESTIONNAIRE_MESSAGES } from "@/features/questionnaire/config";
 import { SurveyCoverageService } from "@/features/questionnaire/surveyCoverageService";
 import { TemplateService } from "@/features/questionnaire/templateService";
-import { StatusCodes } from "@/constants/statusCode";
-import { QUESTIONNAIRE_MESSAGES } from "@/features/questionnaire/config";
-import { QuestionnaireResponse } from "@/features/questionnaire/types";
+import type {
+  ICreateQuestionnaireRequest,
+  QuestionnaireResponse,
+} from "@/features/questionnaire/types";
+import { catchAsyncErrors } from "@/middlewares/catchAsyncErrors";
 
 export const QuestionnaireController = () => {
-
   const { createSurveyCoverage } = SurveyCoverageService();
   const { createTemplate } = TemplateService();
 
   const handleCreateQuestionnaire = catchAsyncErrors(
     async (
-      req: NextApiRequest,
+      req: ICreateQuestionnaireRequest,
       res: NextApiResponse<ApiResponse<QuestionnaireResponse>>,
-      _next: NextHandler,
+      _next: NextHandler
     ) => {
-
-      const coverage = await createSurveyCoverage(req);
       const template = await createTemplate(req);
+      const coverage = await createSurveyCoverage(req, template._id);
 
       const data: QuestionnaireResponse = {
         ...coverage,
@@ -30,10 +34,10 @@ export const QuestionnaireController = () => {
 
       return res.status(StatusCodes.OK).json({
         success: true,
-        data: data,
+        data,
         message: QUESTIONNAIRE_MESSAGES.SUCCESS.CREATE,
       });
-    },
+    }
   );
 
   return { handleCreateQuestionnaire };
