# src/features/questionnaire/types/index.ts
@@ -1,11 +1,33 @@
+import { NextApiRequest } from "next";
+
 import { ISurveyCoverage } from "@/models/SurveyCoverage/types";
 import { ITemplate } from "@/models/Template/types";
 
-export type PickedSurveyCoverageDetails = "templateID" | "dateFrom" | "dateTo" | "isActive";
+export type PickedSurveyCoverageDetails =
+  | "templateID"
+  | "dateFrom"
+  | "dateTo"
+  | "isActive";
 
-export type PickedTemplateDetails = "title" | "description" | "department" | "questions" | "createdBy" | "updatedBy";
+export type PickedTemplateDetails =
+  | "title"
+  | "description"
+  | "department"
+  | "questions"
+  | "createdBy"
+  | "updatedBy";
+
+export interface ICreateQuestionnaireRequest extends NextApiRequest {
+  body: {
+    coverage: Omit<
+      Pick<ISurveyCoverage, PickedSurveyCoverageDetails>,
+      "templateID"
+    >;
+    template: Pick<ITemplate, PickedTemplateDetails>;
+  };
+}
 
 export type QuestionnaireResponse = {
-  coverage: Pick<ISurveyCoverage, PickedSurveyCoverageDetails> & { id: string }
-  template: Pick<ITemplate, PickedTemplateDetails> & { id: string }
+  coverage: Pick<ISurveyCoverage, PickedSurveyCoverageDetails> & { id: string };
+  template: Pick<ITemplate, PickedTemplateDetails> & { id: string };
 };
